@@ -44,6 +44,7 @@
   - is_nonhypotenuse_number?/1
   - is_hypotenuse_number?/1
   - is_practical_number?/1
+  - is_primary_pseudoperfect_number?/1
   
 
 ### Sequences
@@ -61,6 +62,9 @@
  - A004144 - Nonhypotenuse numbers
  - A009003 - Hypotenuse numbers
  - A005153 - Practical numbers
+ - A054377 - Primary pseudoperfect numbers
+
+
 
 
 
